--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,6 +10,10 @@ CopyrightNotice=Author: Olegnormchel. All rights reserved
 [/Script/FrontendUI.FrontendDeveloperSettings]
 FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKeyScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenuScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"),((TagName="Frontend.Widget.ConfirmScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_ConfirmScreen.WBP_CAW_ConfirmScreen_C"),((TagName="Frontend.Widget.StoryScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_StoryScreen.WBP_CAW_StoryScreen_C"),((TagName="Frontend.Widget.OptionsScreen"), "/Game/FrontendUI/UI/Widgets/Options/WBP_CAW_OptionsScreen.WBP_CAW_OptionsScreen_C"))
 OptionsScreenSoftImageMap=(((TagName="Frontend.Image.TestImage"), "/Engine/VREditor/Devices/Vive/UE4_Logo.UE4_Logo"))
+MasterSoundClass=/Game/Sound/SC_Master.SC_Master
+MusicSoundClass=/Game/Sound/SC_Music.SC_Music
+SoundFXSoundClass=/Game/Sound/SC_SFX.SC_SFX
+DefaultSoundMix=/Game/Sound/SCM_Master.SCM_Master
 
 [/Script/CommonInput.CommonInputSettings]
 InputData=/Game/FrontendUI/UI/CommonInputData/InputData_Default.InputData_Default_C
