Added KeyRemap widget & key pressed listener (not final)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ ProjectID=FEC0F0A14B9DF4C5B1E99D97FACB29A8
 CopyrightNotice=Author: Olegnormchel. All rights reserved
 
 [/Script/FrontendUI.FrontendDeveloperSettings]
-FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKeyScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenuScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"),((TagName="Frontend.Widget.ConfirmScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_ConfirmScreen.WBP_CAW_ConfirmScreen_C"),((TagName="Frontend.Widget.StoryScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_StoryScreen.WBP_CAW_StoryScreen_C"),((TagName="Frontend.Widget.OptionsScreen"), "/Game/FrontendUI/UI/Widgets/Options/WBP_CAW_OptionsScreen.WBP_CAW_OptionsScreen_C"))
+FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKeyScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenuScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"),((TagName="Frontend.Widget.ConfirmScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_ConfirmScreen.WBP_CAW_ConfirmScreen_C"),((TagName="Frontend.Widget.StoryScreen"), "/Game/FrontendUI/UI/Widgets/WBP_CAW_StoryScreen.WBP_CAW_StoryScreen_C"),((TagName="Frontend.Widget.OptionsScreen"), "/Game/FrontendUI/UI/Widgets/Options/WBP_CAW_OptionsScreen.WBP_CAW_OptionsScreen_C"),((TagName="Frontend.Widget.KeyRemapScreen"), "/Game/FrontendUI/UI/Widgets/Options/WBP_CAW_KeyRemapScreen.WBP_CAW_KeyRemapScreen_C"))
 OptionsScreenSoftImageMap=(((TagName="Frontend.Image.TestImage"), "/Engine/VREditor/Devices/Vive/UE4_Logo.UE4_Logo"))
 MasterSoundClass=/Game/Sound/SC_Master.SC_Master
 MusicSoundClass=/Game/Sound/SC_Music.SC_Music
