--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -135,3 +135,8 @@ bSkipMovies=False
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=LoadingScreenSequence5s
+
