--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -140,3 +140,6 @@ bWaitForMoviesToComplete=True
 bMoviesAreSkippable=False
 +StartupMovies=LoadingScreenSequence5s
 
+[/Script/FrontendUI.FrontendLoadingScreenSettings]
+SoftLoadingScreenWisgetClass=/Game/FrontendUI/UI/Widgets/WBP_LoadingScreen.WBP_LoadingScreen_C
+
