--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -142,4 +142,6 @@ bMoviesAreSkippable=False
 
 [/Script/FrontendUI.FrontendLoadingScreenSettings]
 SoftLoadingScreenWisgetClass=/Game/FrontendUI/UI/Widgets/WBP_LoadingScreen.WBP_LoadingScreen_C
+bShouldLoadingScreenInEditor=True
+HoldLoadingScreenExtraSeconds=3.000000
 
